--- a/Dockerfiles/Dockerfile.native
+++ b/Dockerfiles/Dockerfile.native
@@ -10,7 +10,7 @@ COPY . /build
 # Build with a more generic CPU target
 RUN chmod +x mvnw && \
     ./mvnw --no-transfer-progress package -Pnative \
-        -Dquarkus.native.additional-build-args=-H:-UseAdvancedInstructionSets,--no-fallback && \
+        -Dquarkus.native.additional-build-args=-H:-UseAdvancedInstructionSets && \
     rm -rf /root/.m2
 
 # Use a lightweight Linux base image with just enough runtime dependencies
