--- a/Dockerfiles/Dockerfile.native
+++ b/Dockerfiles/Dockerfile.native
@@ -1,17 +1,17 @@
 # Using devatherock/graalvm for JDK 17
 FROM devatherock/graalvm:21-ol8 AS builder
 
-# Set the working directory to /build
+# Set the working directory to /home/app
 WORKDIR /build
 
 # Copy the source code into the image for building
 COPY . /build
 
-# Build with a more generic CPU target
+# Build
 RUN chmod +x mvnw && \
     ./mvnw --no-transfer-progress native:compile -Pnative && \
     rm -rf /root/.m2
-
+    
 # Use a lightweight Linux base image with just enough runtime dependencies
 FROM photon:latest
 
@@ -19,7 +19,7 @@ FROM photon:latest
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-# Copy the native executable into the container
+# Copy the native executable into the containers
 COPY --from=builder /build/target/gpt-4-copilot gpt-4-copilot
 
 ENTRYPOINT ["/gpt-4-copilot"]
