--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 management.endpoints.web.exposure.include=metrics,health,info,prometheus
-quarkus.native.container-build=true
+quarkus.native.additional-build-args=-H:NativeImageOptions=-march=x86-64
+
 
 
