--- a/Dockerfiles/Dockerfile.native
+++ b/Dockerfiles/Dockerfile.native
@@ -9,7 +9,8 @@ COPY . /build
 
 # Build
 RUN chmod +x mvnw && \
-    ./mvnw --no-transfer-progress native:compile -Pnative && \
+    ./mvnw --no-transfer-progress native:compile -Pnative -Dquarkus.native.additional-build-args=-H:NativeImageOptions=-march=ivybridge
+ && \
     rm -rf /root/.m2
     
 # Use a lightweight Linux base image with just enough runtime dependencies
