--- a/config.json
+++ b/config.json
@@ -2,9 +2,10 @@
   "gpt3_sleepTime": 0,
   "password": "",
   "get_token_url": "",
+  "copilot_chat_version": "0.14.2024031401",
   "prefix": "",
+  "vscode_version": "vscode\/1.85.2",
   "serverPort": 8080,
   "maxPoolSize": 300,
-  "gpt4_sleepTime": 100,
-  "vscode_version": "vscode\/1.85.2"
+  "gpt4_sleepTime": 100
 }
