gpt4-copilot-java-native v0.1.0

--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "gpt3_sleepTime": 0,
-  "password": "",
-  "get_token_url": "",
-  "copilot_chat_version": "0.14.2024031401",
-  "prefix": "",
-  "one_selfCopilot_limit": 30,
-  "one_copilot_limit": 30,
-  "vscode_version": "vscode\/1.85.2",
-  "serverPort": 8080,
-  "maxPoolSize": 300,
-  "gpt4_sleepTime": 100,
-  "one_coCopilot_limit": 30
+	"gpt3_sleepTime":0,
+	"password":"",
+	"get_token_url":"",
+	"copilot_chat_version":"0.14.2024031401",
+	"prefix":"",
+	"one_selfCopilot_limit":30,
+	"one_copilot_limit":30,
+	"vscode_version":"vscode/1.85.2",
+	"serverPort":8080,
+	"maxPoolSize":300,
+	"gpt4_sleepTime":100,
+	"one_coCopilot_limit":30
 }
