gpt4-copilot-java-native v0.1.1
1.采用graalvm打包，运行内存大幅度减小
2.适配官方requestBody,减小被查询异常
3.新增加入token超时日志，分别查看请求日志
4.使用ConcurrentHashMap，粗略的对于每个密钥按每分钟进行限速
5.新增"url|apikey"形式传入/self/*接口，用于自定义地址和密钥

--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-	"gpt3_sleepTime":0,
+	"prefix":"/",
 	"password":"",
-	"get_token_url":"",
+	"gpt3_sleepTime":0,
+	"gpt4_sleepTime":100,
 	"copilot_chat_version":"0.14.2024031401",
-	"prefix":"",
-	"one_selfCopilot_limit":30,
-	"one_copilot_limit":30,
 	"vscode_version":"vscode/1.85.2",
+	"get_token_url":"https://api.cocopilot.org/copilot_internal/v2/token",
 	"serverPort":8080,
 	"maxPoolSize":300,
-	"gpt4_sleepTime":100,
-	"one_coCopilot_limit":30
+	"one_copilot_limit":30,
+	"one_coCopilot_limit":30,
+	"one_selfCopilot_limit":30
 }
