新增每个密钥对于特定的机器码，一秘钥一机器码，减小被查询异常

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix":"/",
-	"password":"",
+	"password":"ef83f62c-1e8c-4886-ba13-1e548fe290a9",
 	"gpt3_sleepTime":0,
 	"gpt4_sleepTime":100,
 	"copilot_chat_version":"0.14.2024031401",
