--- a/config.json
+++ b/config.json
@@ -1,14 +1,15 @@
 {
-	"prefix":"/",
-	"password":"ef83f62c-1e8c-4886-ba13-1e548fe290a9",
+	"password":"920052ec-14fc-4215-974d-d6fd3c89dd91",
+	"gpt4_prompt":true,
 	"gpt3_sleepTime":0,
 	"gpt4_sleepTime":100,
-	"copilot_chat_version":"0.14.2024031401",
-	"vscode_version":"vscode/1.85.2",
-	"get_token_url":"https://api.cocopilot.org/copilot_internal/v2/token",
-	"serverPort":8080,
 	"maxPoolSize":300,
+	"vscode_version":"1.88.0",
+	"copilot_chat_version":"0.15.2024041001",
+	"get_token_url":"https://api.cocopilot.org/copilot_internal/v2/token",
 	"one_copilot_limit":30,
 	"one_coCopilot_limit":30,
-	"one_selfCopilot_limit":30
+	"one_selfCopilot_limit":30,
+	"serverPort":8080,
+	"prefix":"/"
 }
