--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.gpt4.copilot</groupId>
     <artifactId>gpt-4-copilot</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1</version>
     <name>native</name>
     <description>Demo project for Spring Boot with GraalVM Native Image</description>
     <properties>
@@ -47,6 +47,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+        </dependency>
+        <!--        统计token-->
+        <dependency>
+            <groupId>com.unfbx</groupId>
+            <artifactId>chatgpt-java</artifactId>
+            <version>1.1.5</version>
         </dependency>
     </dependencies>
 
